--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [dev-dependencies]
+dotenvy = "0"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+envy = "0"
+uuid = { version = "1", features= ["v4"] }
